make mouse zoom keep map coordinate under pointer when possible